--- a/pages/outstock/outstock.wxml
+++ b/pages/outstock/outstock.wxml
@@ -8,7 +8,7 @@
     <view class="itemstype">
       <view class="item-text">数量：{{item.number}}</view>
       <view class="item-text">单位：{{item.unit}}</view>
-      <view class="item-text" style="color:green">{{item.type}}</view>
+      <!-- <view class="item-text" style="color:green">{{item.type}}</view> -->
     </view>
     <view class="itemstype">
      
